<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    >



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pregunta"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="270dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonRespuesta"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="342dp"
        android:onClick="checkAnswer"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonRespuesta1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="415dp"
        android:onClick="checkAnswer"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonRespuesta2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="491dp"
        android:onClick="checkAnswer"/>

    <ImageView
        android:id="@+id/ImagenPregunta"
        android:layout_width="270dp"
        android:layout_height="281dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/abeja"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="-11dp" />



</androidx.constraintlayout.widget.ConstraintLayout>